--- a/package.json
+++ b/package.json
@@ -9,5 +9,22 @@
   },
   "author": "Rob Wierzbowski",
   "license": "MIT",
-  "homepage": "https://github.com/robwierzbowski/eslint-robBnB#readme"
+  "homepage": "https://github.com/robwierzbowski/eslint-robBnB#readme",
+  "dependencies": {
+    "@regru/eslint-plugin-prefer-early-return": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "confusing-browser-globals": "^1.0.11",
+    "eslint-plugin-i": "^2.27.5-1",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-package-json": "^0.1.4",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-prefer-function-component": "^3.1.0",
+    "eslint-plugin-testing-library": "^5.10.3",
+    "eslint-plugin-unicorn": "^46.0.0",
+    "eslint-plugin-validate-jsx-nesting": "^0.1.0"
+  },
+  "type": "module"
 }
