--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@regru/eslint-plugin-prefer-early-return": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "confusing-browser-globals": "^1.0.11",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-i": "^2.27.5-1",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
