--- a/package.json
+++ b/package.json
@@ -27,8 +27,18 @@
     "eslint-plugin-unicorn": "^46.0.0",
     "eslint-plugin-validate-jsx-nesting": "^0.1.0"
   },
+  "scripts": {
+    "lint": "eslint ."
+  },
   "peerDependencies": {
     "eslint": "^8.37.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "globals": "^13.20.0",
+    "typescript": "^5.0.4"
+  }
 }
