--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "ESLint rules for modern JavaScript",
   "main": "index.js",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/robwierzbowski/eslint-robBnB.git"
@@ -27,18 +30,16 @@
     "eslint-plugin-unicorn": "^46.0.0",
     "eslint-plugin-validate-jsx-nesting": "^0.1.0"
   },
-  "scripts": {
-    "lint": "eslint ."
-  },
-  "peerDependencies": {
-    "eslint": "^8.37.0"
-  },
-  "type": "module",
   "devDependencies": {
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "globals": "^13.20.0",
+    "react": "^18.2.0",
     "typescript": "^5.0.4"
-  }
+  },
+  "peerDependencies": {
+    "eslint": "^8.37.0"
+  },
+  "type": "module"
 }
