--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "confusing-browser-globals": "^1.0.11",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-i": "^2.27.5-1",
-    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-package-json": "^0.1.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -28,12 +27,14 @@
     "eslint-plugin-react-prefer-function-component": "^3.1.0",
     "eslint-plugin-testing-library": "^5.10.3",
     "eslint-plugin-unicorn": "^46.0.0",
-    "eslint-plugin-validate-jsx-nesting": "^0.1.0"
+    "eslint-plugin-validate-jsx-nesting": "^0.1.0",
+    "eslint-plugin-vitest": "^0.2.2"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
     "globals": "^13.20.0",
     "react": "^18.2.0",
     "typescript": "^5.0.4"
