--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-vitest-globals": "^1.3.1",
     "globals": "^13.20.0",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "typescript": "^5.0.4"
   },
